app/globals.css
@import "tailwindcss";

:root {
  --background: #0f0f0f;
  --foreground: #ffffff;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

body{
  background: #f5f5f4;
  color: #111827;
  font-family: Arial, Helvetica, sans-serif;
}

html{
  scroll-behavior: smooth;
}

section{
  position: relative;
}

@media (max-width: 768px) {
  html {
    zoom: 0.80;
  }
}

